--- a/css/poppins.css
+++ b/css/poppins.css
@@ -4,63 +4,63 @@
   font-family: 'Poppins Regular';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins Regular'), url('../fonts/Poppins/Poppins-Regular.ttf') format('ttf');
+  src: local('Poppins Regular'), url('../fonts/Poppins/Poppins-Regular.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins Italic'), url('../fonts/Poppins/Poppins-Italic.ttf') format('ttf');
+  src: local('Poppins Italic'), url('../fonts/Poppins/Poppins-Italic.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins Thin';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins Thin'), url('../fonts/Poppins/Poppins-Thin.ttf') format('ttf');
+  src: local('Poppins Thin'), url('../fonts/Poppins/Poppins-Thin.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins Thin Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins Thin Italic'), url('../fonts/Poppins/Poppins-ThinItalic.ttf') format('ttf');
+  src: local('Poppins Thin Italic'), url('../fonts/Poppins/Poppins-ThinItalic.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins ExtraLight';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins ExtraLight'), url('../fonts/Poppins/Poppins-ExtraLight.ttf') format('ttf');
+  src: local('Poppins ExtraLight'), url('../fonts/Poppins/Poppins-ExtraLight.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins ExtraLight Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins ExtraLight Italic'), url('../fonts/Poppins/Poppins-ExtraLightItalic.ttf') format('ttf');
+  src: local('Poppins ExtraLight Italic'), url('../fonts/Poppins/Poppins-ExtraLightItalic.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins Light';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins Light'), url('../fonts/Poppins/Poppins-Light.ttf') format('ttf');
+  src: local('Poppins Light'), url('../fonts/Poppins/Poppins-Light.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins Light Italic';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins Light Italic'), url('../fonts/Poppins/Poppins-LightItalic.ttf') format('ttf');
+  src: local('Poppins Light Italic'), url('../fonts/Poppins/Poppins-LightItalic.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Poppins Medium';
   font-style: normal;
   font-weight: normal;
-  src: local('Poppins Medium'), url('../fonts/Poppins/Poppins-Medium.ttf') format('ttf');
+  src: local('Poppins Medium'), url('../fonts/Poppins/Poppins-Medium.ttf') format('truetype');
 }
 
 @font-face {
@@ -73,54 +73,54 @@
     font-family: 'Poppins SemiBold';
     font-style: normal;
     font-weight: normal;
-    src: local('Poppins SemiBold'), url('../fonts/Poppins/Poppins-SemiBold.ttf') format('ttf');
+    src: local('Poppins SemiBold'), url('../fonts/Poppins/Poppins-SemiBold.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Poppins SemiBold Italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Poppins SemiBold Italic'), url('../fonts/Poppins/Poppins-SemiBoldItalic.ttf') format('ttf');
+    src: local('Poppins SemiBold Italic'), url('../fonts/Poppins/Poppins-SemiBoldItalic.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Poppins Bold';
     font-style: normal;
     font-weight: normal;
-    src: local('Poppins Bold'), url('../fonts/Poppins/Poppins-Bold.ttf') format('ttf');
+    src: local('Poppins Bold'), url('../fonts/Poppins/Poppins-Bold.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Poppins Bold Italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Poppins Bold Italic'), url('../fonts/Poppins/Poppins-BoldItalic.ttf') format('ttf');
+    src: local('Poppins Bold Italic'), url('../fonts/Poppins/Poppins-BoldItalic.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Poppins ExtraBold';
     font-style: normal;
     font-weight: normal;
-    src: local('Poppins ExtraBold'), url('../fonts/Poppins/Poppins-ExtraBold.ttf') format('ttf');
+    src: local('Poppins ExtraBold'), url('../fonts/Poppins/Poppins-ExtraBold.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Poppins ExtraBold Italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Poppins ExtraBold Italic'), url('../fonts/Poppins/Poppins-ExtraBoldItalic.ttf') format('ttf');
+    src: local('Poppins ExtraBold Italic'), url('../fonts/Poppins/Poppins-ExtraBoldItalic.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Poppins Black';
     font-style: normal;
     font-weight: normal;
-    src: local('Poppins Black'), url('../fonts/Poppins/Poppins-Black.ttf') format('ttf');
+    src: local('Poppins Black'), url('../fonts/Poppins/Poppins-Black.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Poppins Black Italic';
     font-style: normal;
     font-weight: normal;
-    src: local('Poppins Black Italic'), url('../fonts/Poppins/Poppins-BlackItalic.ttf') format('ttf');
+    src: local('Poppins Black Italic'), url('../fonts/Poppins/Poppins-BlackItalic.ttf') format('truetype');
   }
